<resources>
    <string name="app_name">Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Home</string>


    <string name="dashboard">Home</string>
    <string name="service">Services</string>
    <string name="profile">Profile</string>
    <string name="login_text"> Login</string>
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="user_phone"> Phone No</string>
    <string name="text_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="do_not_have_an_account">Do not have an account?</string>


    <string name="register_text">Register </string>
    <string name="have_an_account">Have an account?</string>
    <string name="login">Login</string>


</resources>